# inferno

./: .env.example  .gitattributes  .gitignore  AGENTS.md  INFERNO_MAP.md  Makefile  README.md  pyproject.toml
.inferno/: phase_state.yaml  taskboard.yaml
.inferno/adr/: ADR-0001-p0-scope-lock.md  ADR-0002-p9-hardening.md  ADR-0003-p10-tensorrtllm-workloads.md  ADR-0004-p11-dashboard.md
.inferno/contracts/: handoff.schema.yaml
.inferno/handoffs/: P0-INTEGRATE.yaml  P0-PREFLIGHT.yaml  P0-RESEARCH.yaml  P0-VERIFY.yaml  P1-INTEGRATE.yaml  P10-TENSORRTLLM-WORKLOADS.yaml  P3-VLLM-SMOKE.yaml  P5-RESEARCH-CORE.yaml  P6-DEPLOYMENT-PROFILE.yaml  P7-CAPACITY-PLANNER.yaml  P8-OFFLINE-ROUTER.yaml  P9-HARDENING.yaml
.inferno/policies/: allowed-tools.yaml  mcp-policy.yaml  secret-policy.md
artifacts/: README.md
configs/engines/: llamacpp.json  ollama.json  sglang.json  tensorrtllm.json  tensorrtllm_t4.json  vllm.json
configs/hardening/: p9_hardening.yaml  repo_audit.yaml
configs/planner/: capacity.yaml  p7_capacity.yaml
configs/router/: offline_router.yaml  p8_offline_router.yaml
configs/study/: ollama_smoke.yaml  p5_decode_heavy.yaml  p5_interactive.yaml  p5_long_context_lite.yaml  p5_smoke.yaml  (+13 more)
docs/: capacity-planner.md  deployment-profile.md  hardening.md  limitations.md  methodology.md  offline-router.md  privacy-and-redaction.md  reproducibility.md  tensorrt-llm.md
tests/: test_artifact_contract.py  test_dashboard.py  test_hardening.py  test_planner.py  test_preflight.py  test_redaction.py  test_release.py  test_router.py  test_study.py  test_vllm_remote.py
(+46 files in other folders)
