[project]
name = "inferno"
version = "0.1.0"
description = "Project Inferno platform preflight tools"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "pyarrow>=16,<21",
    "pydantic>=2.10,<3",
    "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
